# dioscuri

./: .gitignore  README.md  pyproject.toml
docs/: config.example.toml
src/digitalsoup/dioscuri/: cli.py  hosts.py  listener.py  response.py  server.py
src/dioscuri/: dioscuriserver.py  hosts.py  listener.py  main.py  response.py  vhosts.py
tests/: test_hosts.py
