[tool.poetry]
name = "digitalsoup.dioscuri"
version = "0.1.0"
description = "A server speaking the Gemini protocol"
authors = ["Espen Rønnevik <espen@digitalsoup.eu>"]
license = "GPL3"
readme = "README.md"
packages = [
    { include = "digitalsoup", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
ifaddr = "^0.2.0"

[tool.poetry.scripts]
dioscuri = 'digitalsoup.dioscuri.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
